--- a/package.json
+++ b/package.json
@@ -22,48 +22,49 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/config": "^4.0.1",
-    "@nestjs/core": "^11.0.11",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.12",
+    "@nestjs/platform-express": "^11.0.12",
     "@types/pg": "^8.11.11",
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.5.0",
+    "luxon": "^3.6.0",
     "nest-winston": "^1.10.2",
     "nestjs-zod": "^4.3.1",
     "nodemailer": "^6.10.0",
-    "pg": "^8.13.3",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
-    "whatsapp-web.js": "^1.26.0",
+    "whatsapp-web.js": "^1.27.0",
     "winston": "^3.17.0",
-    "yaml": "^2.7.0",
+    "yaml": "^2.7.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
-    "@nestjs/testing": "^11.0.11",
+    "@nestjs/testing": "^11.0.12",
     "@stryker-mutator/core": "^8.7.1",
     "@stryker-mutator/jest-runner": "^8.7.1",
     "@stryker-mutator/typescript-checker": "^8.7.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.14",
     "@types/nodemailer": "^6.4.17",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
     "dotenv-expand": "^12.0.1",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.2.5",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.6",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
