--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
     "@nestjs/platform-express": "^11.0.12",
+    "@plokkke/nest-health-registry": "^1.0.3",
     "@types/pg": "^8.11.11",
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
