--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "crn-flix",
-  "version": "1.0.0",
+  "version": "1.0.1-draft.0",
   "author": "Antoine Caron <antoine@crn-tech.fr>",
   "license": "ISC",
   "description": "CRN-Flix is an application server managing a user list for Jellyfin media server and centralizing media requests from Trakt.",
@@ -27,33 +27,31 @@
     "validate": "npm run lint && npm run build && npm run test"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.12",
+    "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.12",
-    "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/core": "^11.1.0",
+    "@nestjs/platform-express": "^11.1.0",
     "@plokkke/nest-health-registry": "^1.0.3",
-    "@types/pg": "^8.11.11",
-    "axios": "^1.8.4",
-    "discord.js": "^14.18.0",
+    "axios": "^1.9.0",
+    "discord.js": "^14.19.3",
     "lodash": "^4.17.21",
-    "luxon": "^3.6.0",
+    "luxon": "^3.6.1",
     "nest-winston": "^1.10.2",
     "nestjs-zod": "^4.3.1",
-    "nodemailer": "^6.10.0",
-    "pg": "^8.14.1",
+    "nodemailer": "^6.10.1",
+    "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
-    "whatsapp-web.js": "^1.27.0",
     "winston": "^3.17.0",
     "yaml": "^2.7.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.5",
-    "@nestjs/schematics": "^11.0.2",
-    "@nestjs/testing": "^11.0.12",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.0",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/github": "^11.0.2",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@stryker-mutator/core": "^8.7.1",
@@ -62,22 +60,23 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^22.13.14",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.15.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.12.0",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "dotenv-expand": "^12.0.1",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "dotenv-expand": "^12.0.2",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "semantic-release": "^24.2.3",
     "supertest": "^7.1.0",
-    "ts-jest": "^29.3.0",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
